k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olivesafety-api
  namespace: olivesafety
  labels:
    app: olivesafety-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: olivesafety-api
  template:
    metadata:
      labels:
        app: olivesafety-api
    spec:
      serviceAccountName: olivesafety-api-sa
      containers:
        - name: olivesafety-api
          image: olivesafety-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
